--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         }
 
         li.principal:hover>ul {
-            height: 300px;
+            height: 320px;
         }
 
         li.secundario:first-child {
@@ -178,6 +178,7 @@
                         <li class="secundario"><a href="https://preuniversitariosanmarcossimulador01.netlify.app/">Simulador 1</a></li>
                         <li class="secundario"><a href="https://preuniversitariosanmarcossimulador02.netlify.app/">Simulador 2</a></li>
                         <li class="secundario"><a href="https://preuniversitariosanmarcossimulador03.netlify.app/">Simulador 3</a></li>
+                        <li class="secundario"><a href="https://preuniversitariosanmarcossimulador04.netlify.app/">Simulador 4</a></li>
                         <li class="secundario"><a href="https://preusanmarcosminisimulador01.netlify.app/">Mini simulador</a></li>
                     </ul>
                 </li>
