--- a/index.html
+++ b/index.html
@@ -192,13 +192,18 @@
         font-size: 0.9em;
     }
 
-    [alt*="fija"] {
-        position: static;
-        display: block;
-        margin: 20px auto;
-        max-width: 80px;
+       [alt*="fija"] {
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        max-width: 50px;
         height: auto;
+        z-index: 10;
     }
+
+    footer {
+        font-size: 1em;
+        }
 }
     </style>
 </head>
